--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">LiveScore</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="title_news">Tin tức</string>
     <!-- Các chuỗi mới cần thêm -->
     <string name="home_team_logo">Home Team Logo</string>
     <string name="away_team_logo">Away Team Logo</string>
